--- a/tests/cassettes/test_auth_host.yaml
+++ b/tests/cassettes/test_auth_host.yaml
@@ -25,7 +25,7 @@ interactions:
       Content-Type:
       - application/json; charset=utf-8
       Date:
-      - Wed, 27 Oct 2021 17:15:11 GMT
+      - Thu, 18 Nov 2021 18:30:12 GMT
       Strict-Transport-Security:
       - max-age=15724800; includeSubDomains
     status:
@@ -47,16 +47,16 @@ interactions:
   response:
     body:
       string: '{"host": "foo.bar.baz.net", "username": "foo", "password": "bar", "schema_registry":
-        "https://schema-registry-foo.bar.baz"}'
+        "https://schema-registry-foo.bar.baz", "port": "443"}'
     headers:
       Connection:
       - keep-alive
       Content-Length:
-      - '123'
+      - '138'
       Content-Type:
       - application/json; charset=utf-8
       Date:
-      - Wed, 27 Oct 2021 17:15:11 GMT
+      - Thu, 18 Nov 2021 18:30:12 GMT
       Strict-Transport-Security:
       - max-age=15724800; includeSubDomains
     status:
