--- a/tests/cassettes/test_top_n.yaml
+++ b/tests/cassettes/test_top_n.yaml
@@ -19,9 +19,9 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Wed, 27 Oct 2021 17:15:18 GMT
+      - Thu, 18 Nov 2021 18:30:20 GMT
       Request-Id:
-      - 75ba4833-3749-11ec-80db-0242ac110002
+      - 9612b6bf-489d-11ec-804f-0242ac110002
       Transfer-Encoding:
       - chunked
       X-Influxdb-Build:
@@ -29,7 +29,7 @@ interactions:
       X-Influxdb-Version:
       - 1.7.6
       X-Request-Id:
-      - 75ba4833-3749-11ec-80db-0242ac110002
+      - 9612b6bf-489d-11ec-804f-0242ac110002
     status:
       code: 200
       message: OK
@@ -3044,15 +3044,15 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Wed, 27 Oct 2021 17:15:19 GMT
+      - Thu, 18 Nov 2021 18:30:20 GMT
       Request-Id:
-      - 75c0914b-3749-11ec-80dc-0242ac110002
+      - 96197d25-489d-11ec-8050-0242ac110002
       X-Influxdb-Build:
       - OSS
       X-Influxdb-Version:
       - 1.7.6
       X-Request-Id:
-      - 75c0914b-3749-11ec-80dc-0242ac110002
+      - 96197d25-489d-11ec-8050-0242ac110002
     status:
       code: 204
       message: No Content
@@ -3083,7 +3083,7 @@ interactions:
       Content-Type:
       - application/json; charset=utf-8
       Date:
-      - Wed, 27 Oct 2021 17:15:19 GMT
+      - Thu, 18 Nov 2021 18:30:20 GMT
       Strict-Transport-Security:
       - max-age=15724800; includeSubDomains
     status:
@@ -3105,16 +3105,16 @@ interactions:
   response:
     body:
       string: '{"host": "foo.bar.baz.net", "username": "foo", "password": "bar", "schema_registry":
-        "https://schema-registry-foo.bar.baz"}'
+        "https://schema-registry-foo.bar.baz", "port": "443"}'
     headers:
       Connection:
       - keep-alive
       Content-Length:
-      - '123'
+      - '138'
       Content-Type:
       - application/json; charset=utf-8
       Date:
-      - Wed, 27 Oct 2021 17:15:19 GMT
+      - Thu, 18 Nov 2021 18:30:21 GMT
       Strict-Transport-Security:
       - max-age=15724800; includeSubDomains
     status:
@@ -3141,9 +3141,9 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Wed, 27 Oct 2021 17:15:19 GMT
+      - Thu, 18 Nov 2021 18:30:21 GMT
       Request-Id:
-      - 7610e7ee-3749-11ec-80dd-0242ac110002
+      - 96603857-489d-11ec-8051-0242ac110002
       Transfer-Encoding:
       - chunked
       X-Influxdb-Build:
@@ -3151,7 +3151,7 @@ interactions:
       X-Influxdb-Version:
       - 1.7.6
       X-Request-Id:
-      - 7610e7ee-3749-11ec-80dd-0242ac110002
+      - 96603857-489d-11ec-8051-0242ac110002
     status:
       code: 200
       message: OK
@@ -3177,9 +3177,9 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Wed, 27 Oct 2021 17:15:19 GMT
+      - Thu, 18 Nov 2021 18:30:21 GMT
       Request-Id:
-      - 7611eb38-3749-11ec-80de-0242ac110002
+      - 9661aaec-489d-11ec-8052-0242ac110002
       Transfer-Encoding:
       - chunked
       X-Influxdb-Build:
@@ -3187,7 +3187,7 @@ interactions:
       X-Influxdb-Version:
       - 1.7.6
       X-Request-Id:
-      - 7611eb38-3749-11ec-80de-0242ac110002
+      - 9661aaec-489d-11ec-8052-0242ac110002
     status:
       code: 200
       message: OK
@@ -3213,9 +3213,9 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Wed, 27 Oct 2021 17:15:19 GMT
+      - Thu, 18 Nov 2021 18:30:21 GMT
       Request-Id:
-      - 76133dc4-3749-11ec-80df-0242ac110002
+      - 9662ed12-489d-11ec-8053-0242ac110002
       Transfer-Encoding:
       - chunked
       X-Influxdb-Build:
@@ -3223,7 +3223,7 @@ interactions:
       X-Influxdb-Version:
       - 1.7.6
       X-Request-Id:
-      - 76133dc4-3749-11ec-80df-0242ac110002
+      - 9662ed12-489d-11ec-8053-0242ac110002
     status:
       code: 200
       message: OK
@@ -3248,9 +3248,9 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Wed, 27 Oct 2021 17:15:19 GMT
+      - Thu, 18 Nov 2021 18:30:21 GMT
       Request-Id:
-      - 761449b7-3749-11ec-80e0-0242ac110002
+      - 966410a3-489d-11ec-8054-0242ac110002
       Transfer-Encoding:
       - chunked
       X-Influxdb-Build:
@@ -3258,7 +3258,7 @@ interactions:
       X-Influxdb-Version:
       - 1.7.6
       X-Request-Id:
-      - 761449b7-3749-11ec-80e0-0242ac110002
+      - 966410a3-489d-11ec-8054-0242ac110002
     status:
       code: 200
       message: OK
