--- a/tests/cassettes/test_get_auth.yaml
+++ b/tests/cassettes/test_get_auth.yaml
@@ -25,7 +25,7 @@ interactions:
       Content-Type:
       - application/json; charset=utf-8
       Date:
-      - Thu, 18 Nov 2021 18:30:13 GMT
+      - Thu, 18 Nov 2021 18:30:12 GMT
       Strict-Transport-Security:
       - max-age=15724800; includeSubDomains
     status:
@@ -47,7 +47,7 @@ interactions:
   response:
     body:
       string: '{"host": "foo.bar.baz.net", "username": "foo", "password": "bar", "schema_registry":
-        "https://schema-registry-foo.bar.baz", "port": "443"}'
+        "https://schema-registry-foo.bar.baz", "port": "443", "path": "."}'
     headers:
       Connection:
       - keep-alive
@@ -56,7 +56,7 @@ interactions:
       Content-Type:
       - application/json; charset=utf-8
       Date:
-      - Thu, 18 Nov 2021 18:30:14 GMT
+      - Thu, 18 Nov 2021 18:30:12 GMT
       Strict-Transport-Security:
       - max-age=15724800; includeSubDomains
     status:
