--- a/setup.cfg
+++ b/setup.cfg
@@ -15,8 +15,13 @@ replace = __version__ = '{new_version}'
 universal = 1
 
 [flake8]
+extend-ignore = E133, E203, E226, E228, N802, N803, N806, N812, N813, N815, N816, W503
 max-line-length = 110
-exclude = docs
+max-doc-length = 79
+exclude = __init__.py
+
+[isort]
+profile=black
 
 [aliases]
 test = pytest
