--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -14,8 +14,8 @@ name: Python CI
       - "renovate/**"
       - "tickets/**"
       - "u/**"
-    tags:
-      - "*"
+  release:
+    types: [published]
 
 jobs:
   lint:
@@ -89,10 +89,9 @@ jobs:
           && (github.event_name != 'pull_request'
               || startsWith(github.head_ref, 'tickets/'))
 
-  pypi:
-
+  test-package:
+    name: Test PyPI package build
     runs-on: ubuntu-latest
-    needs: [lint, test, docs]
     timeout-minutes: 10
 
     steps:
@@ -101,8 +100,29 @@ jobs:
           fetch-depth: 0 # full history for setuptools_scm
 
       - name: Build and publish
-        uses: lsst-sqre/build-and-publish-to-pypi@v1
+        uses: lsst-sqre/build-and-publish-to-pypi@tickets/DM-39837
         with:
-          pypi-token: ${{ secrets.PYPI_SQRE_ADMIN }}
           python-version: "3.11"
-          upload: ${{ github.event_name == 'push' && startsWith(github.ref, 'refs/tags/') }}
+          upload: "false"
+
+  pypi-publish:
+    name: Upload release to PyPI
+    runs-on: ubuntu-latest
+    environment:
+      name: pypi
+      url: https://pypi.org/p/lsst-efd-client
+    permissions:
+      id-token: write
+    if: github.event_name == 'release' && github.event.action == 'published'
+    needs: [lint, test, test-package, docs]
+    timeout-minutes: 10
+
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0 # full history for setuptools_scm
+
+      - name: Build and publish
+        uses: lsst-sqre/build-and-publish-to-pypi@tickets/DM-39837
+        with:
+          python-version: "3.11"
