--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -100,7 +100,7 @@ jobs:
           fetch-depth: 0 # full history for setuptools_scm
 
       - name: Build and publish
-        uses: lsst-sqre/build-and-publish-to-pypi@tickets/DM-39837
+        uses: lsst-sqre/build-and-publish-to-pypi@v1
         with:
           python-version: "3.11"
           upload: "false"
@@ -123,6 +123,7 @@ jobs:
           fetch-depth: 0 # full history for setuptools_scm
 
       - name: Build and publish
-        uses: lsst-sqre/build-and-publish-to-pypi@tickets/DM-39837
+        uses: lsst-sqre/build-and-publish-to-pypi@v1
         with:
           python-version: "3.11"
+          pypi-token: ${{ secrets.PYPI_SQRE_ADMIN }}
