--- a/tests/cassettes/test_time_series.yaml
+++ b/tests/cassettes/test_time_series.yaml
@@ -3948,6 +3948,41 @@ interactions:
       chunked: 'false'
       db: client_test
       epoch: ns
+      q: SHOW MEASUREMENTS
+    headers: {}
+    method: POST
+    uri: http://localhost:8086/query
+  response:
+    body:
+      string: '{"results":[{"statement_id":0,"series":[{"name":"measurements","columns":["name"],"values":[["lsst.sal.barSubSys.test"],["lsst.sal.fooSubSys.test"]]}]}]}
+
+        '
+    headers:
+      Content-Encoding:
+      - gzip
+      Content-Type:
+      - application/json
+      Date:
+      - Wed, 01 Jun 2022 21:40:06 GMT
+      Request-Id:
+      - 675eae9d-e1f3-11ec-8149-0242ac110002
+      Transfer-Encoding:
+      - chunked
+      X-Influxdb-Build:
+      - OSS
+      X-Influxdb-Version:
+      - 1.7.6
+      X-Request-Id:
+      - 675eae9d-e1f3-11ec-8149-0242ac110002
+    status:
+      code: 200
+      message: OK
+    url: http://localhost:8086/query
+- request:
+    body:
+      chunked: 'false'
+      db: client_test
+      epoch: ns
       q: SELECT foo, bar FROM "client_test"."autogen"."lsst.sal.fooSubSys.test" WHERE
         time >= '2020-01-28T23:07:19.000Z' AND time <= '2020-01-28T23:17:19.000Z'
     headers: {}
