Removing -v option on sphinx tox option, used to debug the docs generated

--- a/tox.ini
+++ b/tox.ini
@@ -37,7 +37,7 @@ commands = pre-commit run --all-files
 [testenv:docs]
 description = Build documentation (HTML) with Sphinx.
 commands =
-    sphinx-build --keep-going -n -W -T -b html -v -d {envtmpdir}/doctrees docs docs/_build/html
+    sphinx-build --keep-going -n -W -T -b html -d {envtmpdir}/doctrees docs docs/_build/html
 
 [testenv:docs-linkcheck]
 description = Check links in the documentation.
