--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,8 +28,7 @@ dependencies = [
     "astropy",
     "pyyaml",
     "tables",
-    "kafkit",
-    "nest_asyncio"
+    "kafkit"
 ]
 dynamic = ["version"]
 
